--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="appName">
       <span>Secret Diary</span>
     </div>
-    <figure class="backgroundimage">
+    <figure class="loginimg">
       <img class="randomloginimage" src="" />
     </figure>
     <script src="js/login.js"></script>
