--- a/id.html
+++ b/id.html
@@ -11,16 +11,34 @@
     <link rel="stylesheet" href="css/todolist.css" />
     <link rel="stylesheet" href="css/weather.css" />
     <link rel="stylesheet" href="css/pageright.css" />
+    <link rel="stylesheet" href="css/search.css" />
   </head>
   <body class="body">
     <div class="secondwindow">
+      <form class="searchform">
+        <input type="text" value="" id="searchbar" />
+        <button id="search"></button>
+      </form>
+      <div class="result"></div>
       <figure class="backgroundimage">
-        <img class="randombackgroundimage" src="" />
+        <img class="secondrandombackgroundimage" src="" />
       </figure>
     </div>
+    <div class="move">
+      <button class="pageright">
+        <img
+          class="arrowright"
+          src="https://img.icons8.com/external-dreamstale-lineal-dreamstale/100/000000/external-right-arrow-arrows-dreamstale-lineal-dreamstale-3.png"
+        />
+      </button>
+      <button class="pageleft">
+        <img
+          class="arrowleft"
+          src="https://img.icons8.com/external-dreamstale-lineal-dreamstale/100/000000/external-left-arrow-arrows-dreamstale-lineal-dreamstale-3.png"
+        />
+      </button>
+    </div>
     <div class="mainwindow">
-      <button class="pageright"></button>
-      <button class="pageleft"></button>
       <div id="weathercss">
         <div id="weather">
           <span></span>
@@ -41,7 +59,7 @@
         <time class="time">00:00:00</time>
       </time>
       <figure class="backgroundimage">
-        <img class="randombackgroundimage" src="" />
+        <img class="mainrandombackgroundimage" src="" />
       </figure>
     </div>
     <script src="js/time.js"></script>
@@ -49,5 +67,11 @@
     <script src="js/todolist.js"></script>
     <script src="js/weather.js"></script>
     <script src="js/pageright.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
+    <script src="jquery/kakaosearchapi.js"></script>
   </body>
 </html>
